[gd_scene load_steps=13 format=3 uid="uid://cbrc0vjbilbwg"]

[ext_resource type="Script" path="res://scripts/user_interface/uiMiniRecipes.gd" id="1_h6qy0"]
[ext_resource type="Theme" uid="uid://b1w4e8m2ojq6j" path="res://design/AbilityButtonsOutCombat.tres" id="2_hqaue"]
[ext_resource type="PackedScene" uid="uid://c87gpcles4gjo" path="res://scenes/user_interface/CustomTextureButton.tscn" id="3_2gpkr"]
[ext_resource type="Texture2D" uid="uid://gc571ukvy2xi" path="res://images/sprites/icon_resources.png" id="4_h3hhc"]
[ext_resource type="Texture2D" uid="uid://dkwkoprestgl2" path="res://images/sprites/icon_camp_item.png" id="5_ki666"]
[ext_resource type="Texture2D" uid="uid://dp2j72h30680c" path="res://images/sprites/icon_combat_item.png" id="6_0e2ho"]
[ext_resource type="Texture2D" uid="uid://cqjhmuvbye63b" path="res://images/sprites/icon_projectiles.png" id="6_miibg"]
[ext_resource type="Texture2D" uid="uid://bw0cxrqo1ci10" path="res://images/sprites/icon_charm.png" id="7_kdyl2"]
[ext_resource type="PackedScene" uid="uid://bpkffg1rqjdpp" path="res://scenes/user_interface/CustomButton.tscn" id="8_7nm2x"]
[ext_resource type="Theme" uid="uid://c1j102ipq8685" path="res://design/ItemButtons.tres" id="9_eknq3"]
[ext_resource type="Texture2D" uid="uid://cxqye3hwkqsge" path="res://images/sprites/cross.png" id="10_8jmqn"]
[ext_resource type="Texture2D" uid="uid://ch3hfjxwctukl" path="res://images/sprites/dialogue_tail.png" id="11_8gwi4"]

[node name="MiniInventory" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
script = ExtResource("1_h6qy0")
hide_empty_categories = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -224.0
offset_right = 104.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_hqaue")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Categories" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Resources" parent="PanelContainer/MarginContainer/VBoxContainer/Categories" instance=ExtResource("3_2gpkr")]
layout_mode = 2
texture = ExtResource("4_h3hhc")
hold_delay = 0.5

[node name="CampItems" parent="PanelContainer/MarginContainer/VBoxContainer/Categories" instance=ExtResource("3_2gpkr")]
layout_mode = 2
texture = ExtResource("5_ki666")
hold_delay = 0.5

[node name="AmmoItems" parent="PanelContainer/MarginContainer/VBoxContainer/Categories" instance=ExtResource("3_2gpkr")]
layout_mode = 2
texture = ExtResource("6_miibg")
hold_delay = 0.5

[node name="CombatItems" parent="PanelContainer/MarginContainer/VBoxContainer/Categories" instance=ExtResource("3_2gpkr")]
layout_mode = 2
texture = ExtResource("6_0e2ho")
hold_delay = 0.5

[node name="Charms" parent="PanelContainer/MarginContainer/VBoxContainer/Categories" instance=ExtResource("3_2gpkr")]
layout_mode = 2
texture = ExtResource("7_kdyl2")
hold_delay = 0.5

[node name="Resources" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Resources" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Resources"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExitButton" parent="PanelContainer/MarginContainer/VBoxContainer/Resources/Resources" instance=ExtResource("8_7nm2x")]
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("9_eknq3")
icon = ExtResource("10_8jmqn")
icon_alignment = 1

[node name="CampItems" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="CampItems" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CampItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AmmoItems" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="AmmoItems" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AmmoItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CombatItems" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="CombatItems" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CombatItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Charms" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Charms" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Charms"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Tail" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0, 1)
position = Vector2(-0.464527, 2.03051e-08)
rotation = -1.5708
scale = Vector2(0.65137, 1.12852)
texture = ExtResource("11_8gwi4")
offset = Vector2(8, 0)

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="focus_exited" from="PanelContainer/MarginContainer/VBoxContainer/Resources/Resources/ExitButton" to="." method="checkInFocus"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Resources/Resources/ExitButton" to="." method="_on_custom_button_pressed"]
